js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/js-module-b.js
(function (_) {
  'use strict';
  function externalDemoFunction() { return 1; }

  _.externalDemoFunction = externalDemoFunction;

  return _
}(module.exports));
